# xpider

./: .gitignore  .pre-commit-config.yaml  Akhil.csv  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff-lint.yml
src/xpider/: main.py  runner.py
src/xpider/cli/: create_project.py
src/xpider/cli/python_file_template/: main  page
src/xpider/data_gatherer/: base_data_gatherer.py  csv_data_gatherer.py  data_gatherer_factory.py  mongodb_data_gatherer.py
src/xpider/http/: http_request.py
src/xpider/processor/: __init__.py  multi_runner_lock.py  process_loop.py
src/xpider/queue/: base_queue.py  list_queue.py  queue_factory.py  redis_queue.py
src/xpider/utils/: locate_config.py  name_tools.py  runner.py  singleton.py
