[tool.poetry]
name = "xpider"
version = "0.1.0"
description = ""
authors = ["Akhil H Nair <aklhnrpm@gmail.com>"]
readme = "README.md"
packages = [{include = "xpider", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
httpx = {extras = ["brotli", "http2", "zstd"], version = ">=0.27.2"}
pydantic = "^2.9.1"
influxdb-client = "^1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
