[tool.poetry]
name = "xpider"
version = "0.1.0"
description = ""
authors = ["Akhil H Nair <aklhnrpm@gmail.com>"]
readme = "README.md"
packages = [{include = "xpider", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
httpx = {extras = ["brotli", "http2", "zstd"], version = ">=0.27.2"}
pydantic = ">=2.5,<3.0"
influxdb-client = ">=1.46.0"
tomlkit = ">=0.13.2"
redis = ">=5.0.8"
pymongo = "^4.9.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xpider = "xpider.main:main"
